# legazz

./: .gitignore  Cargo.toml  Makefile  README.md  apt.txt
doc/: Rust
lib/: lega.s
nb/: legas.ipynb
src/: lexer.rs  main.rs
