[package]
name    = "lega"
version = "0.0.1"
edition = "2021"

authors     = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
description =  "legacy analysis"

[dependencies]
memmap = "0.7.0"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.136"
x11 = "2.20.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(windows)'.dependencies]

[target.'cfg(target_arch = "x86")'.dependencies]
# native-i686 = { path = "native/i686" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
# native-x86_64 = { path = "native/x86_64" }
